--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,7 @@
 
 * {
   font-family: "Montserrat", sans-serif;
-}
-
-/* styles.css */
-.carousel-indicators {
-  display: none !important;
+  scroll-behavior: smooth;
 }
 
 @layer base {
